--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             justify-content: space-between;
             align-items: center;
         }
-
+        
         .logo {
             font-size: 28px;
             font-weight: bold;
@@ -65,7 +65,9 @@
             padding: 0 20px;
             text-align: center;
         }
-
+        .hero img{
+            max-width: 200px;
+        }
         .hero h1 {
             font-size: 48px;
             color: #87CEEB;
@@ -162,13 +164,14 @@
             <ul class="nav-links">
                 <li><a href="index.html">Beranda</a></li>
                 <li><a href="catalog.html">Katalog</a></li>
-                <li><a href="#" onclick="alert('Hubungi kami di WhatsApp: 08123456789')">Kontak</a></li>
+                <li><a href="#" onclick="alert('Hubungi kami di WhatsApp: 6281382011845')">Kontak</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
         <section class="hero">
+            <img src="gambar/logo.png" alt="Rose Romance">
             <h1>Selamat Datang di SkyBloom.Boquet</h1>
             <p>Hadirkan keindahan dan kesegaran bunga pilihan untuk setiap momen spesial Anda</p>
             <a href="catalog.html" class="cta-button">Lihat Koleksi Bunga</a>
