--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
     <main>
         <section class="hero">
-            <img src="gambar/logo.png" alt="Rose Romance">
+            <img src="gambar/logo.png" alt="Logo">
             <h1>Selamat Datang di SkyBloom.Boquet</h1>
             <p>Hadirkan keindahan dan kesegaran bunga pilihan untuk setiap momen spesial Anda</p>
             <a href="catalog.html" class="cta-button">Lihat Koleksi Bunga</a>
@@ -202,3 +202,4 @@
     </footer>
 </body>
 </html>
+
