--- a/catalog.html
+++ b/catalog.html
@@ -204,15 +204,7 @@
         </nav>
     </header>
 
-    <main class="catalog-section">
-        <a href="index.html" class="back-button">← Kembali ke Beranda</a>
-        
-        <div class="catalog-header">
-            <h2>Katalog Bunga</h2>
-            <p>Pilih rangkaian bunga favorit Anda</p>
-        </div>
-
-        <div class="catalog-grid">
+     <div class="catalog-grid">
             <div class="flower-card">
                 <div class="flower-image">
                     <img src="gambar/rose.jpeg" alt="Rose Romance">
@@ -231,7 +223,7 @@
                 </div>
                 <div class="flower-info">
                     <div class="flower-name">White Rose</div>
-                    <div class="flower-description">Rangkaian tulip warna-warni yang ceria dan mempesona</div>
+                    <div class="flower-description">Bunga tropis eksotis untuk tampilan yang unik dan berbeda</div>
                     <div class="flower-price">Rp 300.000</div>
                     <button class="buy-button" onclick="buyFlower('Tulip Paradise', 300000)">Beli Sekarang</button>
                 </div>
@@ -239,49 +231,49 @@
 
             <div class="flower-card">
                 <div class="flower-image">
-                    <img src="gambar/tropical.jpg" alt="Tropical Dream">
+                    <img src="gambar/sun.jpg" alt="Sunflower">
                 </div>
                 <div class="flower-info">
-                    <div class="flower-name">Tropical Dream</div>
-                    <div class="flower-description">Bunga tropis eksotis untuk tampilan yang unik dan berbeda</div>
-                    <div class="flower-price">Rp 350.000</div>
-                    <button class="buy-button" onclick="buyFlower('Tropical Dream', 350000)">Beli Sekarang</button>
-                </div>
-            </div>
-
-            <div class="flower-card">
-                <div class="flower-image">
-                    <img src="gambar/sunflower.jpg" alt="Sunflower Joy">
-                </div>
-                <div class="flower-info">
-                    <div class="flower-name">Sunflower Joy</div>
+                    <div class="flower-name">Sunflower Bloom</div>
                     <div class="flower-description">Bunga matahari cerah yang membawa kebahagiaan dan energi positif</div>
-                    <div class="flower-price">Rp 200.000</div>
-                    <button class="buy-button" onclick="buyFlower('Sunflower Joy', 200000)">Beli Sekarang</button>
+                    <div class="flower-price">Rp 350.000</div>
+                    <button class="buy-button" onclick="buyFlower('Sunflower Bloom', 350000)">Beli Sekarang</button>
                 </div>
             </div>
 
             <div class="flower-card">
                 <div class="flower-image">
-                    <img src="gambar/mixed.jpg" alt="Mixed Elegance">
+                    <img src="gambar/mix.jpg" alt="mix">
                 </div>
                 <div class="flower-info">
-                    <div class="flower-name">Mixed Elegance</div>
+                    <div class="flower-name">Mix Charming Bloom</div>
                     <div class="flower-description">Kombinasi bunga mixed untuk tampilan elegan dan mewah</div>
-                    <div class="flower-price">Rp 400.000</div>
-                    <button class="buy-button" onclick="buyFlower('Mixed Elegance', 400000)">Beli Sekarang</button>
+                    <div class="flower-price">Rp 200.000</div>
+                    <button class="buy-button" onclick="buyFlower('Mix Charming Bloom', 200000)">Beli Sekarang</button>
                 </div>
             </div>
 
             <div class="flower-card">
                 <div class="flower-image">
-                    <img src="gambar/daisy.jpg" alt="Daisy Fresh">
+                    <img src="gambar/pink.jpg" alt="Pink Tulips">
                 </div>
                 <div class="flower-info">
-                    <div class="flower-name">Daisy Fresh</div>
-                    <div class="flower-description">Bunga daisy segar untuk suasana natural dan menenangkan</div>
+                    <div class="flower-name">Pink Tulips</div>
+                    <div class="flower-description">Rangkaian tulip warna-warni yang ceria dan mempesona</div>
+                    <div class="flower-price">Rp 400.000</div>
+                    <button class="buy-button" onclick="buyFlower('Pink Tulips', 400000)">Beli Sekarang</button>
+                </div>
+            </div>
+
+            <div class="flower-card">
+                <div class="flower-image">
+                    <img src="gambar/bloomyred.jpg" alt="Bloomy Red">
+                </div>
+                <div class="flower-info">
+                    <div class="flower-name">Bloomy Red</div>
+                    <div class="flower-description">Bunga segar untuk suasana natural dan menenangkan</div>
                     <div class="flower-price">Rp 180.000</div>
-                    <button class="buy-button" onclick="buyFlower('Daisy Fresh', 180000)">Beli Sekarang</button>
+                    <button class="buy-button" onclick="buyFlower('Bloomy Red', 180000)">Beli Sekarang</button>
                 </div>
             </div>
         </div>
@@ -307,4 +299,5 @@
 </body>
 
 </html>
+
 
