--- a/catalog.html
+++ b/catalog.html
@@ -276,6 +276,7 @@
                     <button class="buy-button" onclick="buyFlower('Bloomy Red', 180000)">Beli Sekarang</button>
                 </div>
             </div>
+     </div>
     </main>
 
     <footer>
